--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -9,14 +8,15 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="webapp/3rd-party/materialize/css/materialize.css"  media="screen,projection"/>
-
+	<!-- jQuery CDN -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-	
+	<div id="header"></div>
 </body>
 <!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="webapp/3rd-party/materialize/js/materialize.js">
-</script>
+<script type="text/javascript" src="webapp/3rd-party/materialize/js/materialize.js"></script>
+<script src="webapp/js/index.js" type="text/javascript"></script>
 </html>
