updated UI for dinkar

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="webapp/3rd-party/materialize/css/materialize.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="3rd-party/materialize/css/materialize.css" media="screen,projection" />
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--Let browser know website is optimized for mobile-->
@@ -80,7 +80,7 @@
     </div>
 </body>
 <!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="webapp/3rd-party/materialize/js/materialize.js"></script>
-<script src="webapp/js/index.js" type="text/javascript"></script>
+<script type="text/javascript" src="3rd-party/materialize/js/materialize.js"></script>
+<script src="js/index.js" type="text/javascript"></script>
 
 </html>
