--- a/webapp/request_access.html
+++ b/webapp/request_access.html
@@ -8,7 +8,7 @@
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="webapp/3rd-party/materialize/css/materialize.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="3rd-party/materialize/css/materialize.css"  media="screen,projection"/>
       <!-- jQuery CDN -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <!--Let browser know website is optimized for mobile-->
@@ -30,7 +30,7 @@
 <body>
     
     <section class="bg-grey-light">
-        <form id="form-validate" class="container form-group-lg bg-grey-dark" action="request_access.php" method="post">
+        <form id="form-validate" class="container form-group-lg bg-grey-dark" action="php/request_access.php" method="post">
             <h1>Request-Access</h1>
             <div class="input-group ">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
