--- a/webapp/display.html
+++ b/webapp/display.html
@@ -8,7 +8,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="webapp/3rd-party/materialize/css/materialize.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="3rd-party/materialize/css/materialize.css" media="screen,projection" />
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--Let browser know website is optimized for mobile-->
@@ -91,7 +91,7 @@
         <tbody id="fridge-content"></tbody>
       </table>
          
-       <script src="displayTa.js"></script>
+       <script src="js/displayTa.js"></script>
     </section>
     <footer id="foot" class="col-sm-12 text-center">
     </footer>
