--- a/webapp/about.html
+++ b/webapp/about.html
@@ -24,7 +24,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="about.html">About Us</a></li>
         <li><a href="request_access.html">Sign-Up</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="loginDAM.html">Login</a></li>
         
       </ul>
     </div>
@@ -65,25 +65,29 @@
         </div>
     </header>
     <div class="jumbotron text-center bg-grey-dark">
-        <h1>About DAM Fridge</h1>
-        <p>
-            Welcome to the <i>about</i> about page. This is where we will provide an
-            overview of our project. In this project we will design a fridge Cam.
+        <h1 style = "text-align:center">About DAM Fridge</h1>
+        <p style = "text-align:center">
+            Welcome to the about page. This is where we will provide an
+            overview of our project. In this project we will design a fridge Cam. 
+        </p>
+        <p style = "text-align:center">
+            The purpose of this project is to partially solve the issue of food waste in Canada. According to some studies, food wastes costs Canada around $31 billion annually. Therefore, the DAM team is proposing a new feature for our fridges where it tracks the number of items in the fridge.   
         </p>
     </div>
     <section id="intro-vid" class="bg-grey-dark">
         <div class="container">
-            <h2>Meet the DAM Team</h2>
-            <div align="center" class="embed-responsive embed-responsive-16by9">
+            <h2 style = "text-align:center">Meet the DAM Team</h2>
+              <img src="images/DAM.jpg" class="media-object img-rounded img-responsive" alt="hld">
+            <!-- <div align="center" class="embed-responsive embed-responsive-16by9">
                 <video class="embed-responsive-item" controls=""><source src="images/introVideo.mp4"
                 type="video/mp4"></video>
-            </div>
+            </div> -->
         </div>
     </section>
     <section id="hld" class="bg-grey-light">
         <div class="container bg-grey">
-            <h2>Overview of the Project</h2>
-            <img src="images/project.png" class="media-object img-rounded img-responsive" alt="hld">
+            <h2 style = "text-align:center">Overview of the Project</h2>
+            <img src="images/project.jpg" class="media-object img-rounded img-responsive" alt="hld">
         </div>
     </section>
     <footer id="foot" class="container-fluid text-center">
