--- a/webapp/forgot_pass.html
+++ b/webapp/forgot_pass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Log In</title>
+   <title>Reset Password</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
@@ -20,8 +20,8 @@
     <!-- Button to open the modal login form -->
     <div class="container">
       <section class="bg-grey-light">
-    <form class="container form-group-lg bg-grey-dark" class="col s12" action="php/login.php" method="post">
-            <h1>Login</h1>
+    <form class="container form-group-lg bg-grey-dark" class="col s12" action="php/forgotPass.php" method="post">
+            <h1>Reset</h1>
         <div class="row">
             
                 <div class="row">
@@ -31,13 +31,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" name="password" type="password" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Login
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Send Email
                         <i class="material-icons right">send</i>
                     </button>
                 </div>
