--- a/index.html
+++ b/index.html
@@ -1,96 +1,106 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title></title>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="webapp/3rd-party/materialize/css/materialize.css"  media="screen,projection"/>
-      <!-- jQuery CDN -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <!--Let browser know website is optimized for mobile-->
-      <!--  <script>
-         // Get the modal
-         var modal = document.getElementById('id01');
-         
-         // When the user clicks anywhere outside of the modal, close it
-         window.onclick = function(event) {
-             if (event.target == modal) {
-                 modal.style.display = "none";
-             }
-         }
-         onclick="document.getElementById('id01').style.display='none'"
-         
-         </script> -->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-   </head>
-   <body>
-      <div id="header"></div>
-      <nav>
-         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Logo</a>
-            <ul class="right hide-on-med-and-down">
-               <li><a href="sass.html"><i class="material-icons left">search</i>Link with Left Icon</a></li>
-               <li><a href="badges.html"><i class="material-icons right">view_module</i>Link with Right Icon</a></li>
-               <li><a onclick="document.getElementById('id01').style.display='block'" class="waves-effect red btn-small"><i class="material-icons">account_box</i></a></li>
-               <div id="id01" class="modal">
-                  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span> 
-                  <!-- Modal Content -->
-                  <form class="modal-content animate" action="login.php" method = "POST">
-                     <div class="container">
-                        <label for="uname"><b>Username</b></label>
-                        <input type="text" placeholder="Enter Username" name="uername" required>
-                        <label for="psw"><b>Password</b></label>
-                        <input type="password" placeholder="Enter Password" name="password" required>
-                        <button class="waves-effect waves_light btn-small" type="submit" ><i class="material-icons">send</i></button>
-                        <a class="waves-effect waves_light btn-small" type="submit" href="confirm.php"><i class="material-icons">mode_edit</i></a>
-                        <a class="waves-effect waves_light btn-small" type="submit" href="signup.php"><i class="material-icons">person_add</i></a>
-                        <a class="waves-effect waves_light btn-small" type="submit" onclick="document.getElementById('id01').style.display='none'"><i class="material-icons">cancel</i></a>
-                     </div>
-                     <!-- <div class="container" style="background-color:#f1f1f1">
-                        </div> -->
-                  </form>
-               </div>
-            </ul>
-         </div>
-      </nav>
-      <div>
-         <ul id="slide-out" class="sidenav sidenav-fixed">
-            <li><a href="#!">First Sidebar Link</a></li>
-            <li><a href="#!">Second Sidebar Link</a></li>
-            <li class="no-padding">
-               <ul class="collapsible collapsible-accordion">
-                  <li>
-                     <a class="collapsible-header">Dropdown<i class="material-icons">arrow_drop_down</i></a>
-                     <div class="collapsible-body">
-                        <ul>
-                           <li><a href="#!">First</a></li>
-                           <li><a href="#!">Second</a></li>
-                           <li><a href="#!">Third</a></li>
-                           <li><a href="#!">Fourth</a></li>
-                        </ul>
-                     </div>
-                  </li>
-               </ul>
-            </li>
-         </ul>
-      </div>
-      <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
-      <div class="fixed-action-btn">
-         <a class="btn-floating btn-large red">
-         <i class="large material-icons">camera</i>
-         </a>
-         <ul>
-            <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-            <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-            <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-            <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-         </ul>
-      </div>
-   </body>
-   <!--JavaScript at end of body for optimized loading-->
-   <script type="text/javascript" src="webapp/3rd-party/materialize/js/materialize.js"></script>
-   <script src="webapp/js/index.js" type="text/javascript"></script>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="webapp/3rd-party/materialize/css/materialize.css" media="screen,projection" />
+    <!-- Import custom css-->
+    <link href="webapp/css/login.css" rel="stylesheet" type="text/css">
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+    <main>
+        <div id="SignInContainer" class="container">
+            <div class="row">
+                <div class="">
+                    <h2 id="SignInTitle" class="center-align white-text">Sign in to DAM Fridge</h2>
+                </div>
+                <div class="col m3 xl4"></div>
+                <div class="col s12 m6 xl4">
+                    <form id="SignInForm" class="col s12 m12">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">account_box</i>
+                                <input placeholder="Enter your email address" id="email" type="email" class="validate">
+                                <label for="email">Email</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">lock</i>
+                                <input placeholder="Enter your password" id="password" type="password" class="validate">
+                                <label for="password">Password</label>
+                            </div>
+                        </div>
+                        <button id="SignInButton" class="btn waves-effect waves-light red" type="submit" name="action">Sign in
+                            <i class="material-icons right">send</i>
+                        </button>
+                        <p class="">
+                            <a id="ForgetPasswordLink" href="#ForgetPasswordContainer">Forget password?</a> or
+                            <a href="#!">Sign up</a>
+                        </p>
+                    </form>
+                </div>
+                <div class="col m3 xl4"></div>
+            </div>
+        </div>
+        <div id="ForgetPasswordContainer" class="container">
+            <div class="row">
+                <h2 id="ResetPasswordTitle" class="center-align white-text">Reset your password</h2>
+                <div class="col m3 xl4"></div>
+                <div class="col s12 m6 xl4">
+                    <form id="ForgetPasswordForm" class="col s12 m12">
+                        <p class="white-text">Enter your email address to receive a link to reset your password.</p>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">account_box</i>
+                                <input placeholder="Enter your email address" id="PasswordEmail" type="email" class="validate">
+                                <label for="email">Email</label>
+                            </div>
+                        </div>
+                        <button id="SendEmail" class="btn waves-effect waves-light red" type="submit" name="action">Send Me a Link
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </form>
+                </div>
+                <div class="col m3 xl4"></div>
+            </div>
+        </div>
+    </main>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">DAM Fridge</h5>
+                    <p class="grey-text text-lighten-4">Engineering capstone 2018.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">More Information</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Team</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2018 DAM Fridge
+            </div>
+        </div>
+    </footer>
+</body>
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="webapp/3rd-party/materialize/js/materialize.js"></script>
+<script src="webapp/js/index.js" type="text/javascript"></script>
+
 </html>
