--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="webapp/3rd-party/materialize/css/materialize.css" media="screen,projection" />
     <!-- Import custom css-->
-    <link href="webapp/css/login.css" rel="stylesheet" type="text/css">
+    <link href="webapp/css/index.css" rel="stylesheet" type="text/css">
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--Let browser know website is optimized for mobile-->
@@ -101,6 +101,6 @@
 </body>
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="webapp/3rd-party/materialize/js/materialize.js"></script>
-<script src="webapp/js/index.js" type="text/javascript"></script>
+<script type="text/javascript" src="webapp/js/index.js"></script>
 
 </html>
