--- a/webapp/index.html
+++ b/webapp/index.html
@@ -80,15 +80,23 @@
     <footer class="page-footer">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
+                <div class="col s6 m6">
                     <h5 class="white-text">DAM Fridge</h5>
-                    <p class="grey-text text-lighten-4">Engineering capstone 2018.</p>
+                    <p class="grey-text text-lighten-4">Engineering capstone 2018</p>
                 </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">More Information</h5>
+                <div class="col s6 m3">
+                    <h5>About</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Team</a></li>
+                        <li><a class="grey-text text-lighten-4" href="#!">Team</a></li>
+                        <li><a class="grey-text text-lighten-4" href="#!">Docs</a></li>
+                    </ul>
+                </div>
+                <div class="col s6 m3">
+                    <h5>Contact</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-4" href="https://github.com/dinkar-sharma/DAM_Fridge_Capstone_2018">Github</a></li>
+                        <li><a class="grey-text text-lighten-4" href="#!">Linkdin</a></li>
+                        <li><a class="grey-text text-lighten-4" href="#!">Email</a></li>
                     </ul>
                 </div>
             </div>
