--- a/webapp/dashboard.html
+++ b/webapp/dashboard.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="3rd-party/materialize/css/materialize.css" media="screen,projection" />
     <!-- Import full calendar.css -->
     <link rel='stylesheet' href='3rd-party/fullcalendar-3.9.0/fullcalendar.css' />
+    <link rel="stylesheet" type="text/css" href="3rd-party/DataTables/datatables.min.css" />
     <!-- Import custom css-->
     <link rel="stylesheet" type="text/css" href="css/dashboard.css">
     <link rel="stylesheet" type="text/css" href="css/page_template.css">
@@ -24,7 +25,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo white-text">Dashboard</a>
+                <a href="#!" class="brand-logo">Dashboard</a>
                 <ul id="nav-mobile" class="right">
                     <li class="hide-on-med-and-down">
                         <a href="#!" data-target="NotificationDropdown" class="dropdown-trigger waves-effect"><i class="material-icons">notifications</i>
@@ -40,7 +41,7 @@
                 </a>
                 <ul id="sidenav-left" class="sidenav sidenav-fixed">
                     <li>
-                        <a href="/pages/admin-dashboard" class="logo-container white-text">Admin
+                        <a href="#!" class="logo-container white-text">
                             <i class="material-icons left">person</i>
                         </a>
                     </li>
@@ -55,6 +56,11 @@
                                         <li>
                                             <a id="dashboard-start" href="#!" class="waves-effect active">Dashboard
                                             <i class="material-icons">web</i>
+                                           </a>
+                                        </li>
+                                        <li>
+                                            <a id="dashboard-start" href="viewfinder.html" class="waves-effect active">Viewfinder
+                                            <i class="material-icons">camera</i>
                                            </a>
                                         </li>
                                     </ul>
@@ -81,8 +87,12 @@
                                 <div class="collapsible-body">
                                     <ul>
                                         <li>
-                                            <a id="settings-start" href="#!" class="waves-effect active">Settings
+                                            <a id="settings-start" href="#settings-wrapper" class="waves-effect active">Settings
                                             <i class="material-icons">settings</i></a>
+                                        </li>
+                                        <li>
+                                            <a id="logout" href="php/logout.php" class="waves-effect active">Logout
+                                            <i class="material-icons">exit_to_app</i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -95,6 +105,34 @@
     </header>
     <main>
         <div class="container">
+            <div id="table-wrapper" class="col s12">
+                <h2 class="white-text">Current Items</h2>
+                <div class="card large">
+                    <div class="card-content">
+                        <table id="table" class="display">
+                            <thead>
+                                <tr>
+                                    <th>Item</th>
+                                    <th>Image location</th>
+                                    <th>Quantity</th>
+                                    <th>Time</th>
+                                </tr>
+                            </thead>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div id="image-wrapper" class="col s12">
+                <div class="col s12 m6">
+                    <div class="card">
+                        <div class="card-image">
+                            <img id="image" class="materialboxed" src="">
+                        </div>
+                        <div class="card-content">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="calendar-wrapper" class="row">
                 <div class="col">
                     <h2 class="white-text">Month View</h2>
@@ -110,92 +148,94 @@
                     <p class="white-text">Update your profile settings. </p>
                 </div>
                 <div class="col s12 m8">
-                    <div class="settings-group">
-                        <ul class="collapsible setting">
-                            <li class="">
-                                <div class="collapsible-header" tabindex="0">
-                                    <span>Username</span>
-                                    <i class="material-icons caret right">keyboard_arrow_right</i>
-                                </div>
-                                <div class="collapsible-body" style="">
-                                    <div class="input-field">
-                                        <input id="username" class="validate" type="text">
-                                        <label for="username">Username</label>
+                    <form action="php/request_access.php" method="post">
+                        <div class="settings-group">
+                            <ul class="collapsible setting">
+                                <li class="">
+                                    <div class="collapsible-header" tabindex="0">
+                                        <span>Username</span>
+                                        <i class="material-icons caret right">keyboard_arrow_right</i>
                                     </div>
-                                </div>
-                            </li>
-                            <li class="">
-                                <div class="collapsible-header" tabindex="0">
-                                    <span>Password</span>
-                                    <i class="material-icons caret right">keyboard_arrow_right</i>
-                                </div>
-                                <div class="collapsible-body" style="">
-                                    <div class="input-field">
-                                        <input id="password" class="validate" type="Password">
-                                        <label for="password">Password</label>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="">
-                                <div class="collapsible-header" tabindex="0">
-                                    <span>Gender</span>
-                                    <i class="material-icons caret right">keyboard_arrow_right</i>
-                                </div>
-                                <div class="collapsible-body" style="">
-                                    <form action="#">
-                                        <p>
-                                            <label>
-                                                <input class="with-gap" name="group1" checked="" type="radio">
-                                                <span>Male</span>
-                                            </label>
-                                        </p>
-                                        <p>
-                                            <label>
-                                                <input class="with-gap" name="group1" type="radio">
-                                                <span>Female</span>
-                                            </label>
-                                        </p>
-                                        <p>
-                                            <label>
-                                                <input class="with-gap" name="group1" type="radio">
-                                                <span>Rather not say</span>
-                                            </label>
-                                        </p>
-                                    </form>
-                                </div>
-                            </li>
-                            <li class="">
-                                <div class="collapsible-header" tabindex="0">
-                                    <span>Address</span>
-                                    <i class="material-icons caret right">keyboard_arrow_right</i>
-                                </div>
-                                <div class="collapsible-body" style="">
-                                    <div class="row">
-                                        <div class="input-field col s8">
-                                            <input id="address" class="validate" type="text">
-                                            <label for="address">Address</label>
-                                        </div>
-                                        <div class="input-field col s4">
-                                            <input id="city" class="validate" type="text">
-                                            <label for="city">City</label>
-                                        </div>
-                                        <div class="input-field col s4">
-                                            <input id="state" class="validate" type="text">
-                                            <label for="state">State</label>
-                                        </div>
-                                        <div class="input-field col s4">
-                                            <input id="zip" class="validate" type="text">
-                                            <label for="zip">Zip Code</label>
-                                        </div>
-                                        <div class="input-field col s4">
-                                            <input id="country" class="validate" type="text">
-                                            <label for="country">Country</label>
+                                    <div class="collapsible-body" style="">
+                                        <div class="input-field">
+                                            <input id="username" class="validate" type="text">
+                                            <label for="username">Username</label>
                                         </div>
                                     </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                                </li>
+                                <li class="">
+                                    <div class="collapsible-header" tabindex="0">
+                                        <span>Password</span>
+                                        <i class="material-icons caret right">keyboard_arrow_right</i>
+                                    </div>
+                                    <div class="collapsible-body" style="">
+                                        <div class="input-field">
+                                            <input id="password" class="validate" type="Password">
+                                            <label for="password">Password</label>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="">
+                                    <div class="collapsible-header" tabindex="0">
+                                        <span>Gender</span>
+                                        <i class="material-icons caret right">keyboard_arrow_right</i>
+                                    </div>
+                                    <div class="collapsible-body" style="">
+                                        <form action="#">
+                                            <p>
+                                                <label>
+                                                    <input class="with-gap" name="group1" checked="" type="radio">
+                                                    <span>Male</span>
+                                                </label>
+                                            </p>
+                                            <p>
+                                                <label>
+                                                    <input class="with-gap" name="group1" type="radio">
+                                                    <span>Female</span>
+                                                </label>
+                                            </p>
+                                            <p>
+                                                <label>
+                                                    <input class="with-gap" name="group1" type="radio">
+                                                    <span>Rather not say</span>
+                                                </label>
+                                            </p>
+                                        </form>
+                                    </div>
+                                </li>
+                                <li class="">
+                                    <div class="collapsible-header" tabindex="0">
+                                        <span>Address</span>
+                                        <i class="material-icons caret right">keyboard_arrow_right</i>
+                                    </div>
+                                    <div class="collapsible-body" style="">
+                                        <div class="row">
+                                            <div class="input-field col s8">
+                                                <input id="address" class="validate" type="text">
+                                                <label for="address">Address</label>
+                                            </div>
+                                            <div class="input-field col s4">
+                                                <input id="city" class="validate" type="text">
+                                                <label for="city">City</label>
+                                            </div>
+                                            <div class="input-field col s4">
+                                                <input id="state" class="validate" type="text">
+                                                <label for="state">State</label>
+                                            </div>
+                                            <div class="input-field col s4">
+                                                <input id="zip" class="validate" type="text">
+                                                <label for="zip">Zip Code</label>
+                                            </div>
+                                            <div class="input-field col s4">
+                                                <input id="country" class="validate" type="text">
+                                                <label for="country">Country</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -218,7 +258,7 @@
                     <h5>Contact</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-4" href="https://github.com/dinkar-sharma/DAM_Fridge_Capstone_2018">Github</a></li>
-                        <li><a class="grey-text text-lighten-4" href="#!">Linkdin</a></li>
+                        <li><a class="grey-text text-lighten-4" href="#!">Linkedin</a></li>
                         <li><a class="grey-text text-lighten-4" href="#!">Email</a></li>
                     </ul>
                 </div>
@@ -236,5 +276,6 @@
 <script type="text/javascript" src="js/dashboard.js"></script>
 <script src='3rd-party/fullcalendar-3.9.0/lib/moment.min.js'></script>
 <script src='3rd-party/fullcalendar-3.9.0/fullcalendar.js'></script>
+<script type="text/javascript" src="3rd-party/DataTables/datatables.js"></script>
 
 </html>
