Added recipe finder. More development on UI.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -64,7 +64,8 @@
                         <div class="row">
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">account_box</i>
-                                <input placeholder="Enter your email address" id="PasswordEmail" name="forgetPassword" type="email" class="validate">
+                                <input placeholder="Enter your email address" id="PasswordEmail" name="email" type="email" class="validate" required="" 
+                                >
                                 <label for="email">Email</label>
                             </div>
                         </div>
