--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DAM Fridge-Login</title>
+    <title>DAM Fridge Cam - Login</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -23,7 +23,7 @@
         <div id="SignInContainer" class="container">
             <div class="row">
                 <div class="">
-                    <h2 id="SignInTitle" class="center-align white-text">Sign in to DAM Fridge</h2>
+                    <h2 id="SignInTitle" class="center-align white-text">Sign in to DAM Fridge Cam</h2>
                 </div>
                 <div class="col m3 xl4"></div>
                 <div class="col s12 m6 xl4">
@@ -80,7 +80,7 @@
         <div id="SignUpContainer" class="container">
             <div class="row">
                 <div class="">
-                    <h2 id="SignUpTitle" class="center-align white-text">Sign up for DAM Fridge</h2>
+                    <h2 id="SignUpTitle" class="center-align white-text">Sign up for DAM Fridge Cam</h2>
                 </div>
                 <div class="col m3 xl4"></div>
                 <div class="col s12 m6 xl4">
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s6 m6">
-                    <h5 class="white-text">DAM Fridge</h5>
+                    <h5 class="white-text">DAM Fridge Cam</h5>
                     <p class="grey-text text-lighten-4">Engineering capstone 2018</p>
                 </div>
                 <div class="col s6 m3">
@@ -138,7 +138,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2018 DAM Fridge
+                © 2018 DAM Fridge Cam
             </div>
         </div>
     </footer>
